# statica

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  settings.py  statica.py
src/content/blog/: coffee-blog-one.md  coffee-blog-three.md  coffee-blog-two.md
src/content/pages/: about.md
src/static/: humans.txt
src/templates/: blog_list.html  blog_show.html  home.html  layout.html  pages.html
